@@ -32,7 +32,7 @@ public class Party {
   }
 
   public void fromInfoMessage(PartyInfoMessage message, PlayerService playerService) {
-    playerService.getPlayersByIds(Collections.singletonList(message.getOwner()))
+    playerService.getPlayersByIds(List.of(message.getOwner()))
         .thenAccept(players -> {
           if (!players.isEmpty()) {
             Platform.runLater(() -> owner.set(players.get(0)));
@@ -40,23 +40,33 @@ public class Party {
         });
 
     playerService
-        .getPlayersByIds(message.getMembers().stream().map(PartyInfoMessage.PartyMember::getPlayer).collect(Collectors.toList()))
+        .getPlayersByIds(message.getMembers().stream()
+            .map(PartyInfoMessage.PartyMember::getPlayer)
+            .collect(Collectors.toList()))
         .thenAccept(players -> {
-          List<PartyMember> members = message.getMembers().stream().map(member -> {
-            Optional<Player> player;
-            if (playerService.getCurrentPlayer().map(Player::getId).map(id -> id.equals(member.getPlayer())).orElse(false)) {
-              player = playerService.getCurrentPlayer(); // The player found by the search below might contain less information (e.g. a missing flag)
-            } else {
-              player = players.stream().filter(playerToBeFiltered -> playerToBeFiltered.getId() == member.getPlayer()).findFirst();
-            }
+          List<PartyMember> members = message.getMembers().stream()
+              .map(member -> {
+                Optional<Player> player;
+                if (playerService.getCurrentPlayer()
+                    .map(Player::getId)
+                    .map(id -> id.equals(member.getPlayer()))
+                    .orElse(false)) {
+                  player = playerService.getCurrentPlayer(); // The player found by the search below might contain less information (e.g. a missing flag)
+                } else {
+                  player = players.stream()
+                      .filter(playerToBeFiltered -> playerToBeFiltered.getId() == member.getPlayer())
+                      .findFirst();
+                }
 
-            if (!player.isPresent()) {
-              log.warn("Could not find party member {}", member.getPlayer());
-              return null;
-            } else {
-              return new PartyMember(player.get(), member.getFactions());
-            }
-          }).filter(Objects::nonNull).collect(Collectors.toList());
+                if (player.isEmpty()) {
+                  log.warn("Could not find party member {}", member.getPlayer());
+                  return null;
+                } else {
+                  return new PartyMember(player.get(), member.getFactions());
+                }
+              })
+              .filter(Objects::nonNull)
+              .collect(Collectors.toList());
           //TODO: this is a race condition. The api might answer with big delay and then server message order might be changed.
           Platform.runLater(() -> this.members.setAll(members));
         });
